Doc/force-app/main/default/objects/Product_Rollup__c/Product_Rollup__c.object-meta.xml
<CustomObject>
    <description>This new object in SFDC will carry same info as that of OP4I Product Rollup object</description>
    <label>Product Rollup</label>
    <nameField>
        <label>Product Rollup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Rollups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>