Doc/force-app/main/default/objects/Product_Rollup__c/fields/Don_t_Show_on_Projects__c.field-meta.xml
<CustomField>
    <fullName>Don_t_Show_on_Projects__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this filed will not be visible on the OA projects</description>
    <label>Don&apos;t Show on Projects?</label>
    <type>Checkbox</type>
</CustomField>