Doc/force-app/main/default/objects/Product_Rollup__c/fields/Highest_Package__c.field-meta.xml
<CustomField>
    <fullName>Highest_Package__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked for few products to determine the package</description>
    <label>Highest Package</label>
    <type>Checkbox</type>
</CustomField>