Doc/force-app/main/default/objects/Product_Rollup__c/fields/OA_Task_ID__c.field-meta.xml
<CustomField>
    <fullName>OA_Task_ID__c</fullName>
    <description>Holds Open Air Task ID number</description>
    <label>OA Task ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>