Doc/force-app/main/default/objects/Product_Rollup__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up to Product Line Object - Product Line Name field</description>
    <label>Product Line</label>
    <referenceTo>Product_Line__c</referenceTo>
    <relationshipLabel>Product Rollups</relationshipLabel>
    <relationshipName>Product_Rollups</relationshipName>
    <type>Lookup</type>
</CustomField>